--- a/index.html
+++ b/index.html
@@ -13,22 +13,24 @@
       --text: rgba(255,255,255,.92);
 
       /* 노션 embed 높이: 필요하면 70~110 사이로 조정 */
-      --h: 72px;
+      --h: 70px;
     }
 
     body{
       margin: 0;
-      padding: 14px 14px 10px;
+      padding: 10px 6px;   /* 좌우 14px → 6px */
       background: var(--bg);
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", sans-serif;
       height: var(--h);
       box-sizing: border-box;
     }
 
+
     .wrap{
-      max-width: 980px;
-      margin: 0 auto;
+      max-width: none;
     }
+
+
 
     .row{
       display: flex;
@@ -117,3 +119,4 @@
   </script>
 </body>
 </html>
+
