--- a/index.html
+++ b/index.html
@@ -7,40 +7,52 @@
   <style>
     :root{
       --bg: transparent;
+
       --line-bg: rgba(255,255,255,.18);
       --line-fill: rgba(255,255,255,.88);
       --shadow: rgba(0,0,0,.35);
-      --text: rgba(255,255,255,.92);
 
-      /* 노션 embed 높이: 필요하면 70~110 사이로 조정 */
-      --h: 70px;
+      --text: rgba(255,255,255,.85);
+
+      /* 임베드 전체 높이: 여기만 줄이면 전체가 같이 줄어듦 */
+      --h: 52px;
     }
 
     body{
       margin: 0;
-      padding: 10px 6px;   /* 좌우 14px → 6px */
+      padding: 0;              /* 임베드 여백 최소화 */
       background: var(--bg);
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", sans-serif;
       height: var(--h);
       box-sizing: border-box;
     }
 
-
+    /* 가로 100% 꽉 차게 */
     .wrap{
-      max-width: none;
+      width: 100%;
+      height: 100%;
+      box-sizing: border-box;
+
+      /* 바가 세로로 꽉 차도록: 위/아래 정렬 */
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      /* 좌우 아주 얇은 안전 여백만(완전 끝까지 원하면 0으로) */
+      padding: 0 4px;
     }
 
-
-
-    .row{
+    /* 바 + 퍼센트(바 아래 오른쪽) */
+    .hud{
+      width: 100%;
       display: flex;
-      align-items: center;
-      gap: 12px;
+      flex-direction: column;
+      gap: 6px; /* 바와 퍼센트 간격 */
     }
 
     .line{
-      flex: 1;
-      height: 20px;
+      width: 100%;
+      height: 20px;            /* 바 두께는 유지 */
       border-radius: 999px;
       background: var(--line-bg);
       position: relative;
@@ -68,25 +80,29 @@
       pointer-events: none;
     }
 
+    /* 퍼센트: 바 오른쪽 끝 아래 */
     .pct{
-      width: 64px;
+      width: 100%;
       text-align: right;
       font-weight: 800;
+      font-size: 12px;
       color: var(--text);
-      letter-spacing: .2px;
+      line-height: 1;
       user-select: none;
+      padding-right: 2px;
     }
 
-    /* 퍼센트 숨기고 싶으면 여기 주석 해제 */
-    /*
-    .pct { display:none; }
+    /* 더 최소화하고 싶으면 아래처럼:
+       - gap 6 -> 4
+       - font-size 12 -> 11
+       - --h 52 -> 48
     */
   </style>
 </head>
 
 <body>
   <div class="wrap">
-    <div class="row">
+    <div class="hud">
       <div class="line" aria-label="Week Progress">
         <div class="fill" id="fill"></div>
         <div class="cursor" id="cursor"></div>
@@ -100,13 +116,11 @@
       const now = new Date();
       const day = now.getDay(); // 0=Sun ... 6=Sat
 
-      // "요일 슬롯 7칸" 기준으로 각 요일의 중앙에 커서를 놓음
-      // slot = 100/7
-      // cursorPos = slot*day + slot/2
+      // 커서/채움: 7칸 슬롯의 중앙 정렬 (시각적으로 "요일 칸" 대응)
       const slot = 100 / 7;
       const cursorPos = slot * day + slot / 2;
 
-      // 퍼센트 표기용: 일요일 0, 토요일 100 (기존 요구 유지)
+      // 퍼센트 표기: Sun=0, Sat=100 (네 초기 요구 유지)
       const pct = (day / 6) * 100;
 
       document.getElementById("fill").style.width = cursorPos + "%";
@@ -119,4 +133,3 @@
   </script>
 </body>
 </html>
-
