--- a/index.html
+++ b/index.html
@@ -12,52 +12,55 @@
       --line-fill: rgba(255,255,255,.88);
       --shadow: rgba(0,0,0,.35);
 
-      --text: rgba(255,255,255,.85);
+      --text: rgba(255,255,255,.80);
 
-      /* 임베드 전체 높이: 여기만 줄이면 전체가 같이 줄어듦 */
-      --h: 52px;
+      /* 임베드 전체 높이: 꽉 차게 만들기 (44~48 추천) */
+      --h: 46px;
+
+      /* 바/퍼센트 간격: 2~4 */
+      --gap: 3px;
+    }
+
+    html, body{
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background: var(--bg);
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", sans-serif;
+      box-sizing: border-box;
     }
 
     body{
-      margin: 0;
-      padding: 0;              /* 임베드 여백 최소화 */
-      background: var(--bg);
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", sans-serif;
-      height: var(--h);
-      box-sizing: border-box;
+      height: var(--h);   /* 노션 iframe 높이에 맞춰 고정 */
+      overflow: hidden;   /* 남는 픽셀로 스크롤 생기는 것 방지 */
     }
 
-    /* 가로 100% 꽉 차게 */
     .wrap{
       width: 100%;
       height: 100%;
+      padding: 0;         /* 좌우 여백도 0으로 (완전 끝까지) */
       box-sizing: border-box;
-
-      /* 바가 세로로 꽉 차도록: 위/아래 정렬 */
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-
-      /* 좌우 아주 얇은 안전 여백만(완전 끝까지 원하면 0으로) */
-      padding: 0 4px;
     }
 
-    /* 바 + 퍼센트(바 아래 오른쪽) */
+    /* 내부를 100% 채우면서 위/아래로 딱 맞게 배치 */
     .hud{
       width: 100%;
+      height: 100%;
       display: flex;
       flex-direction: column;
-      gap: 6px; /* 바와 퍼센트 간격 */
+      justify-content: space-between; /* 핵심: 위(바) / 아래(퍼센트)로 끝까지 벌림 */
+      gap: var(--gap);
     }
 
     .line{
       width: 100%;
-      height: 20px;            /* 바 두께는 유지 */
+      height: 22px;       /* 바 두께 (필요하면 20~24 조절) */
       border-radius: 999px;
       background: var(--line-bg);
       position: relative;
       overflow: hidden;
       box-shadow: 0 2px 10px var(--shadow) inset;
+      flex: 0 0 auto;
     }
 
     .fill{
@@ -80,23 +83,18 @@
       pointer-events: none;
     }
 
-    /* 퍼센트: 바 오른쪽 끝 아래 */
     .pct{
       width: 100%;
       text-align: right;
       font-weight: 800;
-      font-size: 12px;
+      font-size: 11px;
       color: var(--text);
       line-height: 1;
       user-select: none;
-      padding-right: 2px;
-    }
 
-    /* 더 최소화하고 싶으면 아래처럼:
-       - gap 6 -> 4
-       - font-size 12 -> 11
-       - --h 52 -> 48
-    */
+      /* 아래 여백 0에 가깝게: 폰트 베이스라인 때문에 남는 픽셀을 깎는 트릭 */
+      transform: translateY(-1px);
+    }
   </style>
 </head>
 
@@ -116,11 +114,11 @@
       const now = new Date();
       const day = now.getDay(); // 0=Sun ... 6=Sat
 
-      // 커서/채움: 7칸 슬롯의 중앙 정렬 (시각적으로 "요일 칸" 대응)
+      // 커서/채움: 7칸 슬롯 중앙 정렬
       const slot = 100 / 7;
       const cursorPos = slot * day + slot / 2;
 
-      // 퍼센트 표기: Sun=0, Sat=100 (네 초기 요구 유지)
+      // 퍼센트 표기: Sun=0, Sat=100
       const pct = (day / 6) * 100;
 
       document.getElementById("fill").style.width = cursorPos + "%";
