--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       --line-fill: rgba(255,255,255,.88);
       --shadow: rgba(0,0,0,.35);
 
-      --text: rgba(255,255,255,.80);
+      --text: rgba(255,255,255,.85);
 
-      /* 임베드 전체 높이: 꽉 차게 만들기 (44~48 추천) */
-      --h: 48px;
+      /* 노션 임베드 높이(여기 조절해도 되고, 안 해도 됨) */
+      --h: 52px;
 
-      /* 바/퍼센트 간격: 2~4 */
-      --gap: 3px;
+      /* 좌우 안전 여백: 0이면 완전 끝까지 */
+      --xpad: 4px;
     }
 
     html, body{
@@ -31,36 +31,35 @@
     }
 
     body{
-      height: var(--h);   /* 노션 iframe 높이에 맞춰 고정 */
-      overflow: hidden;   /* 남는 픽셀로 스크롤 생기는 것 방지 */
+      height: var(--h);
+      overflow: hidden;
     }
 
     .wrap{
       width: 100%;
       height: 100%;
-      padding: 0;         /* 좌우 여백도 0으로 (완전 끝까지) */
+      padding: 0 var(--xpad);
       box-sizing: border-box;
+
+      /* 핵심: 바를 아래로 최대한 밀착 */
+      display: flex;
+      align-items: flex-end;
     }
 
-    /* 내부를 100% 채우면서 위/아래로 딱 맞게 배치 */
-    .hud{
+    /* 바 + 오버레이(퍼센트)를 묶는 컨테이너 */
+    .barbox{
       width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between; /* 핵심: 위(바) / 아래(퍼센트)로 끝까지 벌림 */
-      gap: var(--gap);
+      position: relative;
     }
 
     .line{
       width: 100%;
-      height: 22px;       /* 바 두께 (필요하면 20~24 조절) */
+      height: 22px;
       border-radius: 999px;
       background: var(--line-bg);
       position: relative;
       overflow: hidden;
       box-shadow: 0 2px 10px var(--shadow) inset;
-      flex: 0 0 auto;
     }
 
     .fill{
@@ -83,38 +82,42 @@
       pointer-events: none;
     }
 
+    /* 퍼센트: 바 위 오른쪽(오버레이) */
     .pct{
-      width: 100%;
-      text-align: right;
+      position: absolute;
+      right: 0;
+      bottom: calc(22px + 6px); /* 바 높이(22px) + 간격(6px) */
       font-weight: 800;
-      font-size: 11px;
-      color: var(--text);
+      font-size: 12px;
       line-height: 1;
+      color: var(--text);
       user-select: none;
-
-      /* 아래 여백 0에 가깝게: 폰트 베이스라인 때문에 남는 픽셀을 깎는 트릭 */
-      transform: translateY(-1px);
+      text-shadow: 0 2px 8px rgba(0,0,0,.45);
     }
+
+    /* 더 타이트하게 하고 싶으면:
+       - bottom 간격 6px -> 4px
+       - font-size 12 -> 11
+    */
   </style>
 </head>
 
 <body>
   <div class="wrap">
-    <div class="hud">
+    <div class="barbox">
+      <div class="pct" id="pct">0%</div>
       <div class="line" aria-label="Week Progress">
         <div class="fill" id="fill"></div>
         <div class="cursor" id="cursor"></div>
       </div>
-      <div class="pct" id="pct">0%</div>
     </div>
   </div>
 
   <script>
     function update(){
-      const now = new Date();
-      const day = now.getDay(); // 0=Sun ... 6=Sat
+      const day = new Date().getDay(); // 0=Sun ... 6=Sat
 
-      // 커서/채움: 7칸 슬롯 중앙 정렬
+      // 바/커서: 7칸 슬롯 중앙 기준(요일 대응)
       const slot = 100 / 7;
       const cursorPos = slot * day + slot / 2;
 
@@ -131,5 +134,3 @@
   </script>
 </body>
 </html>
-
-
